tests/snapshots/scripts_sanitized/fmSyntaxColorizer/fmSyntaxColorizer - ID 64/MBS - ID 44/MBS_DeveloperTools All - ID 179.txt.snap
---
source: src/main.rs
expression: output_content
---
# 20170518 MrW New

Fehleraufzeichnung setzen [ ON ]
AnwenderAbbruchZulassen setzen [ OFF ]

Schreibe Änderung Datens./Abfrage [ Mit Dialog: OFF ]

Variable setzen [ $ChangeTo ; Falls( NICHT _Home::_kAllMbsDeveloperOptions ; 1 ) ]

Ersetze alle Feldwerte [ Home.MBS_DeveloperOptions::On ; Durch Berechnung ersetzen: $ChangeTo ]

Feldwert setzen [ _Home::_gEmptyField ; "" ]

Objekt aktualisieren [ Name: "Preview" ]
Fenster aktualisieren ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "80" ] ⚠️⚠️⚠️
